--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-:root {
-  --Red: hsl(0, 78%, 62%);
-  --Cyan: hsl(180, 62%, 55%);
-  --Orange: hsl(34, 97%, 64%);
-  --Blue: hsl(212, 86%, 64%);
-
-  --Very-Dark-Blue: hsl(234, 12%, 34%);
-  --Grayish-Blue: hsl(229, 6%, 66%);
-  --Very-Light-Gray: hsl(0, 0%, 98%);
-  --w-200: 200;
-  --w-400: 400;
-  --w-600: 600;
-}
+@import url("body.css");
+@import url("header.css");
+@import url("main.css");
